--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charaset="utf-8">
   <title>TakaのPortfolio</title>
   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
 <body>
