--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </ul>
 </header>
 <main>
-  <h2 class="profile01">Profile<h2>
+  <h2 class="profile01">Profile</h2>
   <div class="profile02">
     <p>はじめまして、takaと申します。</p>
     <p>現在 Webプログラミング学習中です。</p>
